[package]
name = "aur-search-bot"
version = "0.4.0"
edition = "2021"
license = "BSD-3-Clause"

[dependencies]
teloxide = { version = "0.12.2", features = ["macros", "ctrlc_handler"] }
log4rs = { version = "1.1.*", features = ["file_appender", "pattern_encoder"] }
tokio = { version = "1.18.*", features = ["rt-multi-thread", "macros"] }
reqwest = { version = "0.11.*", features = ["json"] }
serde = { version = "1.0.*", features = ["derive"] }
regex = { version = "1.9.1", features = ["std"] }
retainer = "0.3.0"
chrono = "0.4.26"
log = "0.4.19"
once_cell = "1.18.0"


[profile.release]
opt-level = 3
lto = true
